--- a/Website/CSS/main.css
+++ b/Website/CSS/main.css
@@ -1,4 +1,6 @@
-#navigation{
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.navigation{
     background-color: red;
     position:fixed;
     top:0;
