--- a/Website/CSS/TryOut.css
+++ b/Website/CSS/TryOut.css
@@ -1,13 +1,20 @@
 #canvasdiv{
 	margin-top: 3em;
 	width: 100vw;
-	text-align: center;
 }
 
 #tyOutCanvas{
-	margin: auto;
 	max-height: 700px;
 	max-width: 800px;
 	background-color: gray;
-
+	z-index: 0;
+	position: absolute;
+	margin: auto;
+}
+#tryOutImg{
+	z-index: 1;
+	position: absolute;
+	max-width: 900px;
+	max-height: 700px;
+	margin: auto;
 }
