--- a/Website/CSS/TryOut.css
+++ b/Website/CSS/TryOut.css
@@ -3,18 +3,20 @@
 	width: 100vw;
 }
 
-#tyOutCanvas{
-	max-height: 700px;
-	max-width: 800px;
+#tryOutCanvas{
 	background-color: gray;
 	z-index: 0;
 	position: absolute;
-	margin: auto;
+	width: 50%;
+	height: 60%;
+	top: 3em;
+	left:25%;
 }
 #tryOutImg{
 	z-index: 1;
 	position: absolute;
-	max-width: 900px;
-	max-height: 700px;
-	margin: auto;
+	width: 50%;
+	height: 60%;
+	top: 3em;
+	left:25%;
 }
