--- a/Website/CSS/main.css
+++ b/Website/CSS/main.css
@@ -3,7 +3,7 @@ img {vertical-align: middle;}
 body {
 	font-family: Verdana, sans-serif;
  	margin: 0;
- 	background-color: #d9d9d9;
+ 	background-color: #d6d6c2;
  }
 
 .navigation{
@@ -43,4 +43,21 @@ body {
 .home{
 	width: 2em;
 	height: 2em;
+}
+
+#githubpage{
+	height: 2em;
+}
+#githubpage:hover{
+	background-color: rgba(0,0,0,0.5);
+}
+
+footer{
+	position: fixed;
+	bottom: 0;
+	display: block;
+	background-color:#e62e00;
+	width:100%;
+	text-align: center;
+	font-size: 10px;
 }
